[package]
name = "oauth-proxy-rs-nginx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git="https://github.com/tokio-rs/axum" }
axum-extra = { git="https://github.com/tokio-rs/axum" }
axum-macros = "0.3.8"
getopts = "0.2.21"
hmac = "0.12.1"
hyper = "0.14.27"
jwt = "0.16.0"
reqwest = { version="0.11.20", features=["json"]  }
serde = { version="1.0.188",features=["derive"]}
sha2 = "0.10.7"
structopt = "0.3.26"
tokio = {version= "1.32.0",features=["full"]}
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
